# genai

./: DEMO.md  PROJECT_SUMMARY.md  README.md  app.py  config.py  env_example.txt  pyproject.toml  requirements.txt  start.sh  streamlit_app.py  test_app.py
sample_documents/: sample_contract.txt
static/css/: style.css
static/js/: script.js
templates/: index.html
